welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: not found: value Inter
  var n=Inter.MIN_VALUE
        ^